force-app/main/default/objects/Position__c/fields/Bypass_Validation_Skill_Required_Field__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Skill_Required_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Validation_Skill Required Field</label>
    <type>Checkbox</type>
</CustomField>