force-app/main/default/objects/Position__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <label>CEO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Picklist_of_CEO</valueSetName>
    </valueSet>
</CustomField>