force-app/main/default/objects/Position__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finanace</fullName>
            </value>
            <value>
                <fullName>Humen Resource</fullName>
            </value>
            <value>
                <fullName>Retail Operation</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>wearhousing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>