force-app/main/default/objects/Position__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>To enter Description of Job</description>
    <inlineHelpText>Enter Description of Job</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>