force-app/main/default/objects/Position__c/fields/Mentor_Name__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Name__c</fullName>
    <label>Mentor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>