force-app/main/default/objects/Position__c/fields/No_of_Days_Open_Position__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Open_Position__c</fullName>
    <formula>IF(
    ISBLANK(Close_Date__c),
    TODAY() - Open_Date__c,
    Close_Date__c - Open_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Days Open Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>