force-app/main/default/objects/Position__c/fields/Position_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Position_Status_Image__c</fullName>
    <formula>CASE( TEXT( Status__c ) , 
      
      &#39;New Position&#39;, IMAGE(&quot;/resource/Green&quot;, &quot;Green&quot;,50,50)  , 
      &#39;Pending Approval&#39;, IMAGE(&quot;/resource/seafoam_green&quot;, &quot;Seafoam Green&quot;,50,50)  ,       
      &#39;Open-Approved&#39;, IMAGE(&quot;/resource/Yellow&quot;, &quot;Yellow&quot;,50,50)  ,  
      &#39;Closed - Failed&#39;, IMAGE(&quot;/resource/Pink&quot;, &quot;Pink&quot;,50,50)  , 
      &#39;Closed - Not Approved&#39;, IMAGE(&quot;/resource/Blue&quot;, &quot;Blue&quot;,50,50)  , 
      &#39;Closed - Cancel&#39;, IMAGE(&quot;/resource/Red&quot;, &quot;Red&quot;,50,50)  ,        
       
       
      
 
      &quot;Sorry ! No Image Found&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Status Image</label>
    <type>Text</type>
</CustomField>