force-app/main/default/objects/Position__c/fields/Salesforce_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Configuration</label>
    <type>Checkbox</type>
</CustomField>