force-app/main/default/objects/Position__c/fields/Skill_Required__c.field-meta.xml
<CustomField>
    <fullName>Skill_Required__c</fullName>
    <label>Skill Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>