force-app/main/default/objects/Position__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Position</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Open-Approved</fullName>
            </value>
            <value>
                <fullName>Closed - Failed</fullName>
            </value>
            <value>
                <fullName>Closed - Not Approved</fullName>
            </value>
            <value>
                <fullName>Closed - Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>