force-app/main/default/objects/Position__c/fields/Sub_Position__c.field-meta.xml
<CustomField>
    <fullName>Sub_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>