force-app/main/default/objects/Position__c/fields/Tableau_CRM__c.field-meta.xml
<CustomField>
    <fullName>Tableau_CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tableau CRM</label>
    <type>Checkbox</type>
</CustomField>