force-app/main/default/objects/Position__c/fields/Traval_Required__c.field-meta.xml
<CustomField>
    <fullName>Traval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traval Required</label>
    <type>Checkbox</type>
</CustomField>