force-app/main/default/objects/Position__c/recordTypes/Non_Tech_Roles.recordType-meta.xml
<RecordType>
    <fullName>Non_Tech_Roles</fullName>
    <active>true</active>
    <label>Non-Tech Roles</label>
</RecordType>