force-app/main/default/objects/Position__c/recordTypes/Tech_Roles.recordType-meta.xml
<RecordType>
    <fullName>Tech_Roles</fullName>
    <active>true</active>
    <label>Tech Roles</label>
</RecordType>