force-app/main/default/objects/Position__c/validationRules/Closed_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( ISPICKVAL( Status__c , &#39;Closed - Failed&#39;),
          ISPICKVAL( Status__c , &#39;Closed - Not Approved&#39;),
          ISPICKVAL( Status__c , &#39;Closed - Cancel&#39;) ),
     ISBLANK(Close_Date__c)   )</errorConditionFormula>
    <errorMessage>Closed date is required</errorMessage>
</ValidationRule>