force-app/main/default/objects/Position__c/validationRules/closed_Open_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>closed_Open_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Open_Date__c  &gt;  Close_Date__c</errorConditionFormula>
    <errorMessage>Closed date Alway be greater than Open date</errorMessage>
</ValidationRule>