force-app/main/default/objects/Position__c/validationRules/Max_Min_Pay_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Min_Pay_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c   &gt;  Max_Pay__c</errorConditionFormula>
    <errorMessage>Max Pay Must be Greater than Min Pay</errorMessage>
</ValidationRule>