force-app/main/default/objects/Position__c/validationRules/Max_pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_pay</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name  &lt;&gt; &quot;System Administrator&quot; &amp;&amp; Max_Pay__c &gt;500000</errorConditionFormula>
    <errorDisplayField>Max_Pay__c</errorDisplayField>
    <errorMessage>Max pay Can&#39;t be more than 500000</errorMessage>
</ValidationRule>