force-app/main/default/objects/Position__c/validationRules/Open_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Open_Date__c)),
    NOT(ISPICKVAL(Status__c, &quot;Open-Approved&quot;))
)</errorConditionFormula>
    <errorMessage>If Open Date is entered, Status must be Open-Approved</errorMessage>
</ValidationRule>