force-app/main/default/objects/Position__c/validationRules/Validation_Rule_For_Responsibilities.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_Responsibilities</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Validation),
      LEN( Responsibilities__c )   &gt; 100
)</errorConditionFormula>
    <errorMessage>Enter letter less than 100</errorMessage>
</ValidationRule>