force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Min_Pay__c</columns>
    <columns>Location__c</columns>
    <columns>Hiring_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>