force-app/main/default/objects/Position__c/listViews/HR_Department.listView-meta.xml
<ListView>
    <fullName>HR_Department</fullName>
    <columns>NAME</columns>
    <filterScope>ScopingRule</filterScope>
    <label>HR Department</label>
</ListView>