force-app/main/default/objects/Position__c/listViews/Status_Filter.listView-meta.xml
<ListView>
    <fullName>Status_Filter</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New Position</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Status Filter</label>
</ListView>